--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1483,6 +1483,18 @@ input, select, textarea {
 			border-top: 0;
 		}
 
+	ul.link-list-in li {
+		border-top: solid 1px #ced0b7;
+		padding: 1.25em 0 0 0;
+		margin: 1.25em 0 0 0;
+	}
+
+		ul.link-list-in li:first-child {
+			padding-top: 0;
+			margin-top: 0;
+			border-top: 0;
+		}
+
 	.button {
 		background-image: -moz-linear-gradient(top, #008dad, #007b9d);
 		background-image: -webkit-linear-gradient(top, #008dad, #007b9d);
