--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1485,7 +1485,8 @@ input, select, textarea {
 
 	ul.link-list-in li {
 		border-top: solid 1px #ced0b7;
-		padding: 1.25em 0 0 0;
+		/*padding: 1.25em 0 0 0;*/
+        padding-left: 10px;
 		margin: 1.25em 0 0 0;
 	}
 
