--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1486,13 +1486,13 @@ input, select, textarea {
 	ul.link-list-in li {
 		border-top: solid 1px #ced0b7;
 		/*padding: 1.25em 0 0 0;*/
-        padding-left: 100px;
+        padding-left: 10px;
 		margin: 1.25em 0 0 0;
+        list-style-type: square;
 	}
 
 		ul.link-list-in li:first-child {
 			padding-top: 0;
-            padding-left: 100px;
 			margin-top: 0;
 			border-top: 0;
 		}
