Adding margins in between news items

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1496,6 +1496,13 @@ input, select, textarea {
 			border-top: 0;
 		}
 
+	ul.link-list-news li {
+		border-top: solid 1px #ced0b7;
+		margin: 1.25em 0 0 0;
+        list-style-type: square;
+        padding-bottom: 20px;
+	}
+
 	.button {
 		background-image: -moz-linear-gradient(top, #008dad, #007b9d);
 		background-image: -webkit-linear-gradient(top, #008dad, #007b9d);
