--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1502,6 +1502,11 @@ input, select, textarea {
         list-style-type: square;
         padding-bottom: 20px;
 	}
+		ul.link-list-news li:first-child {
+			padding-top: 0;
+			margin-top: 0;
+			border-top: 0;
+		}
 
 	.button {
 		background-image: -moz-linear-gradient(top, #008dad, #007b9d);
