--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1487,7 +1487,7 @@ input, select, textarea {
 		border-top: solid 1px #ced0b7;
 		/*padding: 1.25em 0 0 0;*/
         padding-left: 20px;
-		margin: 1.25em 0 0 0;
+		margin: 0.75em 0 0 0;
 	}
 
 		ul.link-list-in li:first-child {
@@ -1497,8 +1497,8 @@ input, select, textarea {
 		}
 
 	ul.link-list-news li {
-		border-top: solid 1px #ced0b7;
-		margin: 1.25em 0 0 0;
+		/*border-top: solid 1px #ced0b7;*/
+		margin: 0.75em 0 0 0;
         list-style-type: square;
         padding-bottom: 20px;
 	}
