--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1472,7 +1472,7 @@ input, select, textarea {
 		}
 
 	ul.link-list li {
-		border-top: solid 1px #ced0b7;
+		/*border-top: solid 1px #ced0b7;*/
 		padding: 0.75em 0 0 0;
 		margin: 0.75em 0 0 0;
 	}
