Fixing margins again

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1474,7 +1474,8 @@ input, select, textarea {
 	ul.link-list li {
 		/*border-top: solid 1px #ced0b7;*/
 		padding: 0.75em 0 0 0;
-		margin: 0.75em 0 0 0;
+		margin: 0 0 0 0;
+		/*margin: 0.75em 0 0 0;*/
 	}
 
 		ul.link-list li:first-child {
