--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1511,6 +1511,19 @@ input, select, textarea {
 			border-top: 0;
 		}
 
+	ul.link-list-cv li {
+		/*border-top: solid 1px #ced0b7;*/
+		margin: 0 0 0 50px;
+		/*margin: 0.75em 0 0 20px;*/
+        list-style-type: square;
+        padding-bottom: 20px;
+	}
+		ul.link-list-cv li:first-child {
+			padding-top: 0;
+			margin-top: 0;
+			border-top: 0;
+		}
+
 	.button {
 		background-image: -moz-linear-gradient(top, #008dad, #007b9d);
 		background-image: -webkit-linear-gradient(top, #008dad, #007b9d);
