--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1686,9 +1686,12 @@ input, select, textarea {
 /*Icon*/
     #icon {
         display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+        /*margin-left: auto;
+        margin-right: auto;*/
+        width: 50%;
+		padding: 3em 0 0 0;
+		margin: 3em 0 0 0;
+	}
     }
 
 /* Copyright */
