--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1686,12 +1686,10 @@ input, select, textarea {
 /*Icon*/
     #icon {
         display: block;
-        /*margin-left: auto;
-        margin-right: auto;*/
+        margin-left: auto;
+        margin-right: auto;
         width: 50%;
-		padding: 3em 0 0 0;
-		margin: 3em 0 0 0;
-	}
+        padding: 10em 0 0 0;
     }
 
 /* Copyright */
