--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1689,7 +1689,7 @@ input, select, textarea {
         margin-left: auto;
         margin-right: auto;
         width: 50%;
-        padding: 10em 0 0 0;
+        padding: 0 0 10em 0;
     }
 
 /* Copyright */
