--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ input, select, textarea {
 		font-size: 13.5pt;
 		font-family: sans-serif;
 		background-color: #e3e9dc;
-		font-family: 'Ubuntu Condensed', sans-serif;
+		font-family: sans-serif;
 		color: #878e83;
 		letter-spacing: -1px;
 	}
