--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,9 +87,8 @@ input, select, textarea {
 
 	body {
 		font-size: 13.5pt;
-		font-family: sans-serif;
+		font-family: Arial;
 		background-color: #e3e9dc;
-		font-family: sans-serif;
 		color: #878e83;
 		letter-spacing: 0px;
 	}
